--- a/.htaccess
+++ b/.htaccess
@@ -2,11 +2,11 @@
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /crossfit/
+RewriteBase /crossfitJ-J/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /crossfit/index.php [L]
+RewriteRule . /crossfitJ-J/index.php [L]
 </IfModule>
 
 # END WordPress
